# fin_functions

./: README.md  requirements.txt  setup.cfg
fin_functions/: __init__.py  finance_functions.py
