[metadata]
name = fin_functions
version = 0.0.1
author = Denis Serdyuk
author_email = ds.eig.fund@gmail.com
description = For calculate finance econometrics
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://github.com/diserdyuk/fin_functions
classifiers = 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial :: Investment
keywords =
    finance
    investment


[options]
packages = find:
python_requires = >= 3.8
include_package_data = True
install_requires =
    numpy>=0.16.0
    pandas>=1.0.0
